--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+aiofiles==0.3.2
+aiohttp==3.2.1
+appdirs==1.4.3
+astroid==1.6.3
+async-timeout==3.0.0
+attrs==18.1.0
+black==18.4a4
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
 feedparser==5.2.1
 idna==2.6
+idna-ssl==1.0.1
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
+Misc==0.1
+multidict==4.3.1
 mutagen==1.39
+pylint==1.8.4
+six==1.11.0
 stagger==1.0.0
 urllib3==1.22
+wrapt==1.10.11
+yarl==1.2.4
