* Reorganized project into packages * Split tests into separate modules for separate components * Generated setup.py, egg and wheels for pip distributions

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-podcasts.db
-launcher.sh
-errors.log
+podd/podcasts.db
 testfiles/
-config.py
+podd/config.py
 *.log
 feeds.txt
+.config.py
+overcast_feeds.txt
