--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 entrypoints==0.3
 feedparser==5.2.1
+idna==2.8
 Jinja2==2.10.1
 keyring==19.0.1
 MarkupSafe==1.1.1
 mutagen==1.42.0
+requests==2.22.0
+urllib3==1.25.3
